# custody-service

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  start.sh
alembic/: env.py
alembic/versions/: 2025_12_26_1124-0cb0f34a925d_init.py  2025_12_26_1503-18149a24cbc6_add_asset_and_provider_fields.py
app/: main.py
app/api/: __init__.py  admin.py  asset.py  transfer.py  treasury.py  vault.py  wallet.py  webhook.py  whitelist.py
app/api/v1/: __init__.py  assets.py  schemas.py
app/broker/: __init__.py  consumer.py  publisher.py  queues.py
app/config/: __init__.py  logger_init.py  settings.py
app/dao/: asset.py  transfer.py  vault.py  wallet.py
app/dao/webhook/: __init__.py  common.py  create.py  parse.py  service.py  update.py  utils.py
app/enums/: __init__.py  fireblocks.py  status.py  types.py
app/models/: __init__.py  asset.py  transaction.py  transfer.py  vault.py  wallet.py
app/schemas/: __init__.py  asset.py  transfer.py  vault.py  wallet.py  webhooks.py  whitelist.py
app/services/: asset_sync.py  balance_sync.py  http_client.py  payout_callback.py  redis_client.py  treasury_bootstrap.py  vault_client.py  vault_database_service.py  webhook_signature.py
app/services/custody/: __init__.py  factory.py
app/storage/: __init__.py  database.py
tests/: __init__.py  conftest.py  test_api_asset.py  test_api_transfer.py  test_api_vault.py  test_api_whitelist.py  test_fireblocks_integration.py  test_health.py  test_integration.py  test_models.py  test_schemas.py  test_services.py  test_webhooks.py
(+10 files in other folders)
