[project]
name = "custody-v2"
version = "2.0.0"
description = "Custody Service V2 - Independent custody service without business logic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "black>=25.11.0",
    "cachetools>=6.2.2",
    "cryptography>=46.0.3",
    "fastapi>=0.121.3",
    "hvac>=2.4.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "ruff>=0.14.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
    "redis>=5.2.1",
    "python-dateutil>=2.9.0.post0",
]

[tool.ruff]
src = ["app"]
line-length = 120
preview = true
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".idea",
    "venv",
    ".env",
]
lint.extend-select = [
    "E501",
    "E301",
    "E302",
    "E303",
    "E305",
    "E306",
    "W391",
]
lint.ignore = [
    "F403",
    "F405",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
